updated survey info

--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@ eventbrite:  "35748820685"         # optional: alphanumeric key for Eventbrite r
   <li>Accessible restrooms are available.</li>
 </ul>
 <p>
-  Materials will be provided in advance of the workshop and
-  large-print handouts are available if needed by notifying the
+  This workshop is based on the  
+  <a href='http://swcarpentry.github.io/r-novice-gapminder/'>"R for Reproducible Scientific Analysis"</a>
+  Software Carpentry lesson. 
+  Large-print handouts are available if needed by notifying the
   organizers in advance.  If we can help making learning easier for
   you (e.g. sign-language interpreters, lactation facilities) please
   get in touch (using contact details below) and we will
@@ -188,8 +190,8 @@ eventbrite:  "35748820685"         # optional: alphanumeric key for Eventbrite r
   2' to be actual dates or days of the week.
 -->
 <h2 id="schedule">Schedule</h2>
+<!--
 
-<!-- DO NOT EDIT SURVEY LINKS -->
 <p><em>Surveys</em></p>
 {% if page.carpentry == "swc" %} 
 <p>Please be sure to complete these surveys before and after the workshop.</p>
@@ -202,7 +204,7 @@ eventbrite:  "35748820685"         # optional: alphanumeric key for Eventbrite r
 {% elsif page.carpentry == "lc" %}
 <p>Ask your instructor about pre- and post-workshop Survey details.</p>
 {% endif %}
-
+-->
 
 {% if page.carpentry == "swc" %}
   {% include sc/schedule.html %}
